--- a/catalog/includes/apps/expressly/composer.json
+++ b/catalog/includes/apps/expressly/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "expressly/php-common": "1.0.16"
+        "expressly/php-common": "~1.1.6"
     },
     "repositories": [
         {
