init phpunit environment with empty test

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-.idea
-vendor/
-vendor/*
-composer.phar
-composer.lock
 .DS_Store
+.idea
+
+/bin
+/build/coverage
+/build/logs
+/vendor
+/composer.lock
+/composer.phar
