--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "expressly/php-common": "2.3.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.*"
+    "phing/phing": "2.*",
+    "phpunit/phpunit": "4.8.*",
+    "phpunit/phpunit-selenium": ">=1.2"
   },
   "repositories": [
     {
@@ -24,7 +26,12 @@
       "Expressly\\Lib\\": "lib/"
     }
   },
-  "config": {
-    "bin-dir": "bin"
+  "scripts": {
+    "test": [
+      "phing",
+      "phpunit"
+    ],
+    "phpunit": "phpunit",
+    "phing": "phing"
   }
 }
