--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require-dev": {
     "phing/phing": "2.*",
     "phpunit/phpunit": "4.8.*",
-    "phpunit/phpunit-selenium": ">=1.2"
+    "phpunit/phpunit-selenium": ">=1.2",
+    "guzzlehttp/guzzle": "6.1.*"
   },
   "repositories": [
     {
