--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
     <!-- ============================================  -->
     <target name="build" depends="prepare">
 
-        <echo msg="Download osCommerce dist..." />
+        <echo msg="Download osCommerce v2.3 dist..." />
 
         <exec command="curl -o oscommerce2.zip -L http://github.com/osCommerce/oscommerce2/archive/v2.3.4.zip" dir="./build" />
 
@@ -37,6 +37,9 @@
         <pdosqlexec url="mysql:host=localhost;dbname=osc_test" encoding="utf8"
                     userid="root" password="" onerror="abort">
             <fileset dir="./build/webroot/install">
+                <include name="*.sql"/>
+            </fileset>
+            <fileset dir="./tests/fixtures">
                 <include name="*.sql"/>
             </fileset>
         </pdosqlexec>
